WIP: fix vertical align imposter

--- a/frontend/src/app/main/ui/workspace/shapes/text/new_editor.scss
+++ b/frontend/src/app/main/ui/workspace/shapes/text/new_editor.scss
@@ -49,6 +49,7 @@
   [data-itype="root"] {
     display: flex;
     flex-direction: column;
+    height: 100%;
   }
 }
 
